ecmascript/parser/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration7_es6/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration7_es6/input.ts:5:26
  |
5 |   async function foo(a = await): Promise<void> {
  |                          ^^^^^

